<resources>
    <string name="app_name">AiEdu</string>
    <string name="mail_subheader_title">Содержание</string>
    <string name="more">more</string>
    <string name="content_description_more">content_description_more</string>
    <string name="page_title">ML Guide Book</string>
    <string name="metrics_text">Метрики: Accuracy train: %.2f, Recall train: %.2f, F1 Score train: %.2f, Accuracy test: %.2f, Recall test: %.2f, F1 Score test: %.2f</string>
    <string name="lm_main_title">Линейные модели машинного обучения</string>
    <string name="lm_point1">Почему модели называют линейными?</string>
    <string name="lm_text1">Представьте, что у вас есть множество объектов, и вам нужно каждому объекту сопоставить определенное значение. Например, у вас есть список транзакций по банковской карте, и вы хотите определить, какие из этих транзакций являются мошенническими. Если вы разделите все операции на два класса, обозначив законные действия нулем, а мошеннические — единицей, то перед вами окажется простейшая задача классификации. Рассмотрим другой пример: у вас есть данные геологоразведки, и вы хотите оценить перспективы различных месторождений. В этом случае, используя набор геологических данных, ваша модель может прогнозировать, например, потенциальную годовую прибыль от эксплуатации шахты. Это пример задачи регрессии. Значения, которые мы хотим сопоставить объектам из нашего множества, иногда называют таргетами (от английского \"target\"). Таким образом, задачи классификации и регрессии можно свести к задаче поиска отображения от множества объектов к множеству возможных таргетов.</string>
    <string name="lm_point2">Что такое бинарная классификация?</string>
    <string name="lm_text2">Бинарная классификация — это задача машинного обучения, где нужно разделить данные на две категории (или классы). Например, определить, является ли сообщение спамом (1) или нет (0). Модель учится на примерах, чтобы предсказать вероятность принадлежности объекта к одному из двух классов.</string>
    <string name="lm_point3">Что такое логистическая регрессия?</string>
    <string name="lm_text3">Логистическая регрессия — это модель машинного обучения, которая используется для задач классификации. Несмотря на название, она связана с линейной регрессией, так как использует линейное уравнение для вычисления результата. Однако вместо точного значения модель выдает вероятность принадлежности объекта к определенному классу, преобразуя линейное уравнение с помощью логистической функции (сигмоиды), которая сжимает результат в диапазон от 0 до 1.</string>
    <string name="lm_point4">Как обучается модель?</string>
    <string name="lm_text4">Простой математический метод: Модель минимизирует ошибку (разницу между реальными и предсказанными значениями). Для этого используется функция потерь, например, логистическая функция ошибки. Процесс настройки параметров (весов) называется оптимизацией. Метод градиентного спуска (SGD): Модель начинает с произвольных значений параметров. Вычисляет, как изменить параметры, чтобы уменьшить ошибку (градиент функции потерь). Параметры обновляются в направлении, уменьшающем ошибку. В случае стохастического градиентного спуска (SGD) обновления происходят на основе каждого отдельного примера из данных, что делает обучение быстрым и адаптивным.</string>
    <string name="hello_blank_fragment">▎Гайдбук по Моделям Машинного Обучения

▎Приветственное слово

Добро пожаловать в наш гайдбук по моделям машинного обучения (ML)! В этом руководстве мы познакомим вас с основными концепциями и методами, которые лежат в основе ML. Мы надеемся, что этот материал будет полезен как новичкам, так и тем, кто хочет освежить свои знания в этой динамично развивающейся области.

▎Что такое машинное обучение?

Машинное обучение — это подмножество искусственного интеллекта, которое позволяет компьютерам обучаться на данных и делать предсказания или принимать решения без явного программирования. С помощью алгоритмов и статистических моделей машины могут выявлять закономерности в данных, что делает ML мощным инструментом для решения различных задач.

▎Краткая историческая справка

История машинного обучения начинается в 1950-х годах с первых экспериментов в области искусственного интеллекта. С тех пор область значительно развилась, претерпев несколько этапов. В 1980-х годах появились нейронные сети, которые стали основой для современных подходов. В последние десятилетия с увеличением объема данных и вычислительных мощностей машинное обучение стало неотъемлемой частью многих технологий, от рекомендационных систем до автономных автомобилей.

▎Оглавление

1. Линейные модели

   • 1.1 Основы линейной регрессии

   • 1.2 Логистическая регрессия

   • 1.3 Применение линейных моделей

2. Деревья решений

   • 2.1 Принципы работы деревьев решений

   • 2.2 Алгоритмы построения деревьев (CART, ID3, C4.5)

   • 2.3 Преимущества и недостатки деревьев решений

3. Нейронные сети

   • 3.1 Введение в нейронные сети

   • 3.2 Архитектуры нейронных сетей (полносвязные, свёрточные, рекуррентные)

   • 3.3 Обучение и оптимизация нейронных сетей

Мы надеемся, что этот гайдбук поможет вам глубже понять модели машинного обучения и их применение в реальных задачах. Начнем наше путешествие в мир ML!</string>
    <string name="learn">Обучить!</string>
    <string name="metrics_void">Результаты:</string>
    <string name="lm_menu_name">Линейные модели</string>
    <string name="dt_menu_name">Деревья решений</string>
    <string name="ai_menu_name">Нейронные сети</string>
    <string name="value_hint">Оставьте пустым, если хотите MAX значение</string>
    <string name="value_eq">Значение=</string>
    <string name="dt_text1">1-ый параметр определяет стратегию разделения узлов в дереве. Он указывает, какое правило используется для выбора наилучшего критерия разбиения данных. Примеры правил: GINI: Критерий Джини. Используется для измерения степени \"чистоты\" узла. Наиболее часто применяется в задачах классификации. ENTROPY: Энтропия (информационный прирост). Основана на теории информации. Также применяется для классификации. Роль: Определяет, как дерево решает, на какой фиче и при каком пороге выполнить разделение данных.</string>
    <string name="dt_text2">Максимальная глубина дерева. Этот параметр задаёт, сколько уровней узлов может иметь дерево от корня до листа. Примеры: maxDepth = 3: Дерево будет состоять максимум из трёх уровней. maxDepth = Integer.MAX_VALUE: Ограничений на глубину нет. Роль: Контролирует сложность дерева: Маленькое значение уменьшает риск переобучения, но может привести к недообучению. Большое значение позволяет дереву обучаться более гибко, но может увеличивать вероятность переобучения.</string>
    <string name="dt_text3">Максимальное количество узлов (как внутренних, так и листьев) в дереве. Примеры: maxNodes = 10: В дереве может быть не больше 10 узлов. maxNodes = Integer.MAX_VALUE: Ограничений на количество узлов нет. Роль: Помогает ограничивать размер дерева, чтобы избежать переобучения. Может использоваться как альтернатива maxDepth.</string>
    <string name="dt_text4">Минимальный размер узла. Указывает минимальное количество наблюдений (примеров) в узле, при котором дерево может продолжать делить узел на подузлы. Примеры: nodeSize = 1: Узел будет разделён, если в нём есть хотя бы 1 пример. nodeSize = 10: Узел будет разделён, только если в нём есть минимум 10 примеров. Роль: Помогает избежать чрезмерного деления и создания слишком маленьких узлов. Увеличение этого параметра делает дерево более \"грубым\" и устойчивым к шуму, но может ухудшить качество модели.</string>
    <string name="gini">GINI</string>
    <string name="entropy">ENTROPY</string>
    <string name="dataset_chose_string">Выбираем DataSet</string>
</resources>